New-Upload-1755854042013/objects/TC_Adminified_Organization__c.object
<CustomObject>
    <fields>
        <fullName>TC_Last_Sync_Date__c</fullName>
        <label>Last Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TC_Organization_Alias__c</fullName>
        <label>Organization Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Organization_ID__c</fullName>
        <label>Organization ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Organization_Type__c</fullName>
        <label>Organization Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Installed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>TC Adminified Organization</label>
    <nameField>
        <displayFormat>ORG-{0000}</displayFormat>
        <label>Organization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TC Adminified Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>